cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 26)

add_executable(untitled main.cpp
        Lab-2/lab-2-3.cpp
        Lab-2/lab-2-1.cpp
        Lab-2/lab-2-4.cpp
        lab-3/lab-3-1.cpp
        lab-3/lab-3-2.cpp
        Lab-2/Rk1.cpp
        lab-3/lab-3-3.cpp
        lab-3/lab-3-4.cpp
        lab-3/lab-3-5.cpp
        lab-3/lab-3-6.cpp
        lab-3/lab-3-7.cpp
        lab-3/lab-3-8.cpp
        lab-3/lab-3-9.cpp
        lab-3/lab-3-10.cpp
        lab-3/lab-3-11.cpp
        lab-4/lab-4-1.cpp
        lab-4/lab-4-2.cpp
        lab-4/lab-4-3.cpp
        lab-4/lab-4-4.cpp
        lab-4/lab-4-5.cpp
        lab-4/lab-4-6.cpp
        lab-4/lab-4-7.cpp
        lab-4/lab-4-8.cpp
        lab-5/lab-5-1.cpp
        lab-5/lab-5-1.h
)
